objects/Coaching_Note__c.object
<CustomObject>
    <description>This object stores coaching information</description>
    <fields>
        <fullName>Action_Items__c</fullName>
        <inlineHelpText>Actions for the next review session</inlineHelpText>
        <label>Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Coaching Notes</relationshipLabel>
        <relationshipName>Coaching_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Previous_Coaching_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Coaching Note</label>
        <referenceTo>Coaching_Note__c</referenceTo>
        <relationshipLabel>Coaching Notes</relationshipLabel>
        <relationshipName>Coaching_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suggestions_for_Improvement__c</fullName>
        <label>Suggestions for Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Coaching Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CN{0000000}</displayFormat>
        <label>Coaching Notes Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coaching Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>